--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -27,6 +27,10 @@
 h1, h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 	line-height: 1.25;
+	.heading-label {
+		font-size: .65em;
+		display: block;
+	}
 }
 
 h1 {
