--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -33,38 +33,39 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-h1 {
-	// font-size: 2rem;
-	// font-weight: 700;
+//TRAINING TYPE
+.entry-content,
+#secondary,
+.sidebar-form {
+	h2 {
+		font-size: header-size(small, h2);
+	}
+	h3 {
+		font-size: header-size(small, h3);
+	}
+	h4 {
+		font-size: header-size(small, h4);
+	}
+	h5 {
+		font-size: header-size(small, h5);
+	}
+	h6 {
+		font-size: header-size(small, h6);
+	}
 }
-
-h2 {
-	// font-size: 1.25rem;
-	// font-weight: 700;
+.entry-content {
+	ul,
+	ol,
+	p {
+		+ h2,
+		+ h3 {
+			margin-top: 2rem;
+		}
+	}
 }
 
 #secondary,
 .sidebar-form {
-	@include breakpoint(medium) {
-		h1 {
-			font-size: header-size(small, h1);
-		}
-		h2 {
-			font-size: header-size(small, h2);
-		}
-		h3 {
-			font-size: header-size(small, h3);
-		}
-		h4 {
-			font-size: header-size(small, h4);
-		}
-		h5 {
-			font-size: header-size(small, h5);
-		}
-		h6 {
-			font-size: header-size(small, h6);
-		}
-	}
 	&.quick-info h3 {
 		font-size: 18px;
 		@include breakpoint(large) {
