--- a/assets/sass/components/_topbar.scss
+++ b/assets/sass/components/_topbar.scss
@@ -66,7 +66,14 @@
 		.menu {
 			> li > a {
 				line-height: 40px;
-				padding: 10px 1rem;
+				padding: 10px 0.9rem;
+			}
+		}
+		.top-bar-right {
+			.menu {
+				> .menu-item > a {
+					padding: 10px 0.5rem;
+				}
 			}
 		}
 	}
