removed all but 2 php notices

--- a/assets/sass/components/_cc-form.scss
+++ b/assets/sass/components/_cc-form.scss
@@ -34,3 +34,9 @@
 		}
 	}
 }
+
+// .ctct-form-wrapper .success {
+//     background-color: rgba(46, 204, 64, 0.02);
+//     border-color: #2ECC40;
+//     color: #1b7926;
+// }
