--- a/assets/sass/components/_hero.scss
+++ b/assets/sass/components/_hero.scss
@@ -49,9 +49,9 @@
 		height: 70vh;
 	}
 
-	@include breakpoint(large) {
-		// height: 75vh;
-	}
+	// @include breakpoint(large) {
+	// 	// height: 75vh;
+	// }
 }
 
 .hero-content {
