--- a/assets/sass/components/_topbar.scss
+++ b/assets/sass/components/_topbar.scss
@@ -1,5 +1,6 @@
 #site-navigation {
 	height: 50px;
+	font-size: 15px;
 
 	.top-bar-title {
 		background-color: $bgcolor;
@@ -96,7 +97,7 @@
 			width: auto;
 		}
 		.site-title {
-			padding: 1.25rem .85rem 1.25rem 1rem;
+			padding: 1.25rem 0 1.25rem 0.45rem;
 		}
 		.top-bar-left {
 			margin-left: 8px;
@@ -158,7 +159,7 @@
 		.sub-menu {
 			position: absolute;
 			display: block;
-			left: 252px;
+			left: 230px;
 			width: 100%;
 			padding-left: 8px;
 			transition: opacity 0.25s ease-out;
