--- a/assets/sass/base/_colors.scss
+++ b/assets/sass/base/_colors.scss
@@ -45,7 +45,8 @@ $colors: (
    twitter: #55acee,
    google: #de4b39,
    reddit: #cee3f8,
-   linkedin: #007bb5
+   linkedin: #007bb5,
+   youtube: #cc181e,
  )
 );
 
