--- a/assets/sass/components/_topbar.scss
+++ b/assets/sass/components/_topbar.scss
@@ -10,47 +10,47 @@
 	.site-title {
 		font-size: 2rem;
 	}
-
-	.top-bar-left,
-	.top-bar-right {
-		width: auto;
-		a {
-			color: $white;
-			transition: $button-transition;
-			@include hover {
-				background-color: $topbar-bg-hover;
-			}
-		}
-	}
-	.top-bar-left {
-		a {
-			padding: 6px 1rem;
-		}
-	}
-	.top-bar-right {
-		a {
-			i {
-				vertical-align: baseline;
-			}
-			[class^="icon-"]:before, [class*=" icon-"]:before {
-				font-size: 1.25rem; //MRo edit
-			}
-		}
-	}
-	.menu {
-		background-color: transparent;
-	}
 	.menu-item {
-		a {
-			line-height: 38px;
-			padding: 6px 1rem;
-		}
 		ul {
 			opacity: 0;
 			visibility: hidden;
 		}
 	}
 }
+
+#main-menu,
+#utility-menu {
+	width: auto;
+	.menu {
+		background-color: transparent;
+	}
+	a {
+		color: $white;
+		line-height: 38px;
+		padding: 6px 1rem;
+		transition: $button-transition;
+		@include hover {
+			background-color: $topbar-bg-hover;
+		}
+	}
+}
+//utility-menu
+#utility-menu {
+	a {
+		i {
+			vertical-align: baseline;
+		}
+		[class^="icon-"]:before, [class*=" icon-"]:before {
+			font-size: 1.25rem; //MRo edit
+		}
+	}
+}
+
+.sub-menu {
+	// opacity: 0;
+	// visibility: hidden;
+}
+
 
 @include breakpoint(medium) {
 	#site-navigation {
@@ -60,22 +60,25 @@
 			padding: 0.25rem 0.9rem 0.25rem 1rem;
 			width: 164px;
 		}
+	}
 
-		.menu {
-			> li > a {
-				line-height: 40px;
-				padding: 10px 0.9rem;
-			}
+	#main-menu,
+	#utility-menu {
+		a {
+			padding: 10px 0.9rem;
+			line-height: 40px;
 		}
-		.top-bar-right {
-			.menu {
-				> .menu-item > a {
-					padding: 10px 0.5rem;
-				}
-			}
+	}
+
+	#utility-menu {
+
+		.menu-item-social > a {
+			padding: 10px 0.5rem 10px 0.7rem;
+
 		}
 	}
 }
+
 
 @include breakpoint(large) {
 
@@ -88,36 +91,34 @@
 			$topbar-bg 50%,
 			$topbar-bg 100%
 		);
+
 		height: 112px;
 
 		.top-bar-title {
 			width: auto;
 		}
+
 		.site-title {
 			padding: 1.25rem 0 1.25rem 0.45rem;
 		}
-		.top-bar-left {
-			margin-left: 8px;
+	}
+
+	#main-menu,
+	#utility-menu {
+		a {
+			line-height: 30px;
 		}
+	}
+
+	#main-menu {
+		margin-left: 8px;
+
 		.menu {
 			margin-top: 10px;
-			> li > a {
-				line-height: 30px;
-				padding: 6px 1rem 10px;
-			}
 		}
-		.top-bar-right {
-			margin-right: 8px;
-			.menu {
-				> li > a {
-					line-height: 30px;
-					padding: 6px 1rem 4px;
-				}
-				> .menu-item-social > a {
-					line-height: 30px;
-					padding: 6px 0.5rem 4px;
-				}
-			}
+
+		a {
+			padding: 6px 1rem 10px;
 		}
 
 		.menu-item {
@@ -147,7 +148,6 @@
 					visibility: visible;
 				}
 			}
-
 		}
 
 		.sub-menu {
@@ -170,4 +170,33 @@
 			}
 		}
 	}
+
+	#utility-menu {
+		.menu {
+			margin-right: 8px;
+		}
+
+		.menu-item-social > a {
+			padding: 9px 0.5rem 4px;
+			line-height: 43px;
+
+			@include hover {
+				background-color: transparent;
+			}
+
+			&.facebook:hover {
+				color: color('social', 'facebook');
+			}
+			&.youtube:hover {
+				color: color('social', 'youtube');
+			}
+			&.twitter:hover {
+				color: color('social', 'twitter');
+			}
+			&.linkedin:hover {
+				color: color('social', 'linkedin');
+			}
+		}
+	}
+
 }
