--- a/assets/sass/components/_offcanvas.scss
+++ b/assets/sass/components/_offcanvas.scss
@@ -1,23 +1,57 @@
 .off-canvas {
+	font-size: 15px;
 	.close-button {
-		@include link-color($white, color('blue', 'dark'));
+		@include link-color($white, color('blue', 'light'));
+		top: 0;
+		right: 0;
+		// background-color: red;
+		width: 40px;
+		padding-bottom: 0.35rem;
 	}
-}
-
-.mobile-menu {
-	padding-top: $global-padding;
-	color: $white;
 	ul {
 		@include reset-list;
 	}
-	a {
-		@include link-bg-color(transparent, $topbar-bg-hover, $white, $white)
-	    padding: rem-calc(8 20);
-	    display: block;
+	.mobile-menu {
+		a {
+			color: $white;
+			display: block;
+			padding: 0.5rem 1rem;
+			@include hover {
+				background-color: darken( color('blue', 'dark'), 3% );
+			}
+		}
+		> .menu-item {
+			border-bottom: 1px solid lighten( color('blue', 'dark'), 6% );
+		}
+		.menu-item-has-children {
+			> a {
+				color: color('blue', 'light');
+				font-weight: bold;
+				text-transform: uppercase;
+				font-size: 14px;
+				// font-family: $header-font-family;
+				@include hover {
+					background-color: transparent;
+				}
+			}
+		}
 	}
 }
 
-a.ofc-home {
-  padding: rem-calc(8 20);
-  display: block;
-}
+// .mobile-menu {
+// 	padding-top: $global-padding;
+// 	color: $white;
+// 	ul {
+// 		@include reset-list;
+// 	}
+// 	a {
+// 		@include link-bg-color(transparent, $topbar-bg-hover, $white, $white)
+// 	    padding: rem-calc(8 20);
+// 	    display: block;
+// 	}
+// }
+
+// a.ofc-home {
+//   padding: rem-calc(8 20);
+//   display: block;
+// }
