event thumbnails + other
also changed calendar page to 3 in medium, and changed all 1vw default to 100vw

--- a/assets/sass/pages/_event.scss
+++ b/assets/sass/pages/_event.scss
@@ -22,7 +22,7 @@
 	}
 
 	#events-calendar & {
-		@include breakpoint(medium) {
+		@include breakpoint(large) {
 			@include scale-media-proportionally(26.2%);
 			float: left;
 			width: 50%;
@@ -37,7 +37,7 @@
 .event-info {
 	text-align: center;
 	#events-calendar & {
-		@include breakpoint(medium) {
+		@include breakpoint(large) {
 			width: 50%;
 			float: right;
 			padding-left: $global-padding;
