--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -52,7 +52,7 @@ $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
   primary: color('blue', 'base'),
-  secondary: color('gold', 'base'),
+  secondary: color('blue', 'light'),
   success: #3adb76,
   warning: #ffae00,
   alert: #cc4b37,
