--- a/assets/sass/base/_buttons.scss
+++ b/assets/sass/base/_buttons.scss
@@ -1,11 +1,4 @@
 input[type="submit"],
-input[type="button"],
-button {
+input[type="button"] {
   @include button;
-
-  &.cf-uploader-trigger {
-  	@include button-style(color('blue', 'light'), scale-color(color('blue', 'light'), $lightness: -15%);, $white);
-  }
 }
-
-
