--- a/assets/sass/components/_hero.scss
+++ b/assets/sass/components/_hero.scss
@@ -18,44 +18,26 @@
 	}
 
 	.orbit-container {
-		display: none;
+		opacity: 0;
 	}
 }
-
-
-.hero-slider-image {
-	// position: relative;
-	// overflow:hidden;
-	// height: 90vw;
-	// background: $black;
-
-	// img,
-	// video,
-	// iframe {
-	// 	@include object-fit;
-	// 	opacity: .7;
-	// }
-
-	// @include breakpoint(medium) {
-	// 	height: 70vh;
-	// }
-}
-
-.loading {
-	position: absolute;
-	top: 75%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: $white;
-	text-align: center;
-	@include text-shadow;
-}
-.hero-content {
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	color: $white;
-	text-align: center;
-	@include text-shadow;
+.hero-header {
+	.loading {
+		position: absolute;
+		top: 75%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: $white;
+		text-align: center;
+		@include text-shadow;
+	}
+	.hero-content {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		color: $white;
+		text-align: center;
+		@include text-shadow;
+	}
 }
