--- a/assets/sass/components/_hero.scss
+++ b/assets/sass/components/_hero.scss
@@ -26,7 +26,12 @@
 	}
 	body:not(.home) & {
 		@include breakpoint(medium) {
-			height: 55vh;
+			height: 60vh;
+		}
+	}
+	body.page-template-template-schedule & {
+		@include breakpoint(medium) {
+			height: 40vh;
 		}
 	}
 }
