basic filter style

--- a/assets/sass/base/_variables.scss
+++ b/assets/sass/base/_variables.scss
@@ -1,1 +1,8 @@
 $vertical-spacing: 40px;
+
+/*********************
+Others
+*********************/
+
+//"Filters" on Speakers and Talks
+$filters-label-width: 55px;
